@startuml database

entity "User" as u {
    * id: integer
    * type: UserType
    * username: string
    * password_hash: string
    * properties: JSONB
    * created_at: DateTime
    * updated_at: DateTime
}

entity "Place" as p {
    * id: integer
    * name: string
    * description: string
    * address: string
    * created_at: DateTime
    * updated_at: DateTime
}

entity "Event" as e {
    * id: integer
    * place_id: integer <<FK>>
    * name: string
    * description: string
    * started_at: DateTime
    * ended_at: DateTime
    * created_at: DateTime
    * updated_at: DateTime
}

enum "FeatureValue" as fv {
    * AVAILABLE: 1
    * NOT_AVAILABLE: -1
}

entity "Feature" as f {
    * id: integer
    * slug: string
    * name: string
}

entity "PlaceFeature" as pf {
    * place_id: integer <<FK>>
    * feature_id: integer <<FK>>
    * feature_value: FeatureValue
}

entity "EventFeature" as ef {
    * event_id: integer <<FK>>
    * feature_id: integer <<FK>>
    * feature_value: FeatureValue
}

p ||--|{ pf
f ||--|{ pf
fv ||--|{ pf
fv ||--|{ ef
p ||--|{ e
e ||--|{ ef
f ||--|{ ef

@enduml